# tempSystem

./: LICENSE  README  README.md
sensor_service/: .gitignore  CMakeLists.txt  config.example.yaml
sensor_service/src/: Config.cpp  Config.hpp  Dht22Reader.cpp  Dht22Reader.hpp  HttpClient.cpp  HttpClient.hpp  main.cpp
weather-station-web/: package-lock.json  package.json  weather.sqlite-shm  weather.sqlite-wal
weather-station-web/src/app/: page.tsx
weather-station-web/src/app/api/health/: route.ts
weather-station-web/src/app/api/ingest/: route.ts
weather-station-web/src/app/api/readings/: route.ts
weather-station-web/src/app/api/stats/: route.ts
weather-station-web/src/app/history/: page.tsx
weather-station-web/src/lib/: db.ts  validation.ts
